added docker login

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
       - run:
           name: Publish Docker Image to Docker Hub
           command: |
+            docker login
             docker push $IMAGE_NAME:temp
 
   test:
